                this field if you want to see it. As the field is optional, you can also hide it to remove
                it everywhere (notably forms).
        * Activities :
            - A field of 'Activity', "Fixed or floating?" (internal name: 'floating_type') is now visible.
            - A "card" brick is now available for the hat of the Activities' detail-view.
              It's use by default by the new installations.
        * Billing :
            - The number generation has been heavily reworked. The old number generation system
              took a prefix in settings & generated numbers in the form "PREFIX15".
              The new system can be visually configured & is more powerful :
                - The configuration takes now a format string; there are a mandatory variable "{counter}",
                  but also "{year}", "{month}" & "{code}" (which corresponds to the new field 'Organisation.code').
                - The counter can be reset annually/monthly.
                - The counter can be manually edited (it's useful after a mass-import to keep a consistent numbering).
                - The manual edition of the number can be forbidden.
              Notice that if you upgrade from Creme2.6, your existing configuration is migrated &
              you should not see difference for Invoices/Quotes/Sales Orders.
              The numbers for Credit Notes are not automatically generated at their creation anymore.
              These variables in settings.py have been removed :
                - QUOTE_NUMBER_PREFIX
                - INVOICE_NUMBER_PREFIX
                - SALESORDER_NUMBER_PREFIX
            - It's now forbidden by default to edit the source Organisation of a Invoice/CreditNote when a number is set.
              This behaviour can be changed in the configuration portal of 'billing'.
            - The 'Convert to ...' buttons have been reworked :